Added some SQLite functionality

--- a/0_the_project/templates/index.html
+++ b/0_the_project/templates/index.html
@@ -12,7 +12,7 @@
 
 <div class="rectangle">
     <div id="preview"></div>
-    <img src="{{ url_for('video') }} " style="display: none" id="video"/>
+    <img src="{{ url_for('video') }}" id="video" style="display: none; margin-left: auto; margin-right: auto;"/>
 </div>
 
 <script src="static/main.js"></script>
