--- a/0_the_project/templates/index.html
+++ b/0_the_project/templates/index.html
@@ -4,15 +4,37 @@
     <meta charset="UTF-8">
     <title>Users recognition</title>
     <link rel="stylesheet" type="text/css" href="static/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Live streaming</h1>
 
-<button id="start" class="btn" onclick="showHide('preview','video')">Start</button>
+<div>
+    <h1>Сервіс з ідентифікації облич мешканців ЖК</h1>
+</div>
+
+<div>
+    <h3>Як працює?</h3>
+    <ul>
+        <li>Маємо БД з даними про мешканців ЖК </li>
+        <li>Обличчя людини розпізнається на камері</li>
+        <li>Програма вираховує, чи існує дане обличчя в БД ЖК</li>
+        <li>Людина або пропускається в ЖК, або ні</li>
+    </ul>
+</div>
+
+<div>
+    <h2>Приклад ідентифікації</h2>
+</div>
 
 <div class="rectangle">
     <div id="preview"></div>
     <img src="{{ url_for('video') }}" id="video" style="display: none; margin-left: auto; margin-right: auto;"/>
+</div>
+
+<div>
+  <button id="start" class="btn" onclick="showHide('preview','video')">Start</button>
 </div>
 
 <script src="static/main.js"></script>
