--- a/0_the_project/templates/admin.html
+++ b/0_the_project/templates/admin.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="../static/main.css">
+    <title>Admin</title>
+    <link rel="stylesheet" type="text/css" href="/static/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="content">
@@ -33,5 +36,7 @@
     </table>
     {% endif %}
 </div>
+
+<script src="/static/main.js"></script>
 </body>
 </html>
