--- a/0_the_project/templates/index.html
+++ b/0_the_project/templates/index.html
@@ -29,7 +29,8 @@
 </div>
 
 <div class="rectangle">
-    <div id="preview"></div>
+    <img src="../images/person.jpg" id="preview"/>
+    <img src="../images/play.svg" id="play_icon"/>
     <img src="{{ url_for('video') }}" id="video" style="display: none; margin-left: auto; margin-right: auto;"/>
 </div>
 
