--- a/0_the_project/templates/admin.html
+++ b/0_the_project/templates/admin.html
@@ -27,9 +27,7 @@
                 <td>{{ user.address }}</td>
                 <td>{{ user.created_at.date() }}</td>
                 <td>
-                    <a href="/delete/{{user.id}}">Delete</a>
-                    <br>
-                    <a href="/update/{{user.id}}">Update</a>
+                    <a href="/users/delete/{{user.id}}">Delete</a>
                 </td>
             </tr>
         {% endfor %}
