--- a/0_the_project/templates/index.html
+++ b/0_the_project/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 <body>
 
@@ -30,7 +31,6 @@
 
 <div class="rectangle">
     <img src="../images/person.jpg" id="preview"/>
-    <img src="../images/play.svg" id="play_icon"/>
     <img src="{{ url_for('video') }}" id="video" style="display: none; margin-left: auto; margin-right: auto;"/>
 </div>
 
