Made some changes in the js file, started modifying the admin panel

--- a/0_the_project/static/main.css
+++ b/0_the_project/static/main.css
@@ -107,13 +107,9 @@ p
   animation: colorchange 3s linear infinite;
 }
 
-.content {
-    margin: 0 auto;
-    width: 1440px;
-}
 
 table, td, th {
-    border: 1px solid #aaa;
+    border: 1px solid white;
 }
 
 table {
@@ -189,7 +185,7 @@ body {
 
 /* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
 .header a.logo {
-  font-size: 25px;
+  font-size: 22px;
   font-weight: bold;
 }
 
