--- a/0_the_project/templates/admin.html
+++ b/0_the_project/templates/admin.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="content">
-    <h1 style="text-align: center">Users Manager</h1>
+    <h1 style="text-align: center">Адмін панель</h1>
     {% if users|length < 1 %}
     <h4 style="text-align: center">There is no users yet.</h4>
     {% else %}
