Trying to make webcam stream to actually start/stop

--- a/0_the_project/templates/index.html
+++ b/0_the_project/templates/index.html
@@ -38,7 +38,7 @@
 
         <div class="rectangle">
             <img src="../images/person.jpg" id="preview"/>
-            <img src="{{ url_for('video_start') }}" id="video" style="display: none; margin-left: auto; margin-right: auto;"/>
+            <img src="{{ url_for('video') }}" id="video" style="display: none; margin-left: auto; margin-right: auto;"/>
         </div>
 
         <div>
