--- a/the_project/templates/admin.html
+++ b/the_project/templates/admin.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <title>Admin</title>
+<script src="https://kit.fontawesome.com/bfb9c3600a.js" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block body %}
