--- a/the_project/static/main.css
+++ b/the_project/static/main.css
@@ -80,7 +80,7 @@ p
 }
 
 .btn {
-  background-color: white;/*mediumslateblue; /* Green */
+  background-color: white;/*mediumslateblue; !* Green */
   border: none;
   color: black;
   padding: 18px 100px;
@@ -275,4 +275,122 @@ body {
   background: rgb(192, 57, 43);
   padding:4px 18px;
 }
+
+
+#wrap{
+  width: 100%;
+  max-width:900px;
+  margin:0 auto 60px;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.25);
+  margin-top: 60px;
+}
+
+.input-content {
+  position: relative;
+  padding: 44px 55px;
+  background: #fff;
+  z-index: 10;
+}
+.input-content h2 {
+  padding-bottom: 45px;
+  font-size: 1.625em;
+  font-weight: bold;
+  vertical-align: middle;
+  color:black;
+  text-align:left;
+}
+
+.inputbox {
+  overflow: hidden;
+  position: relative;
+  padding: 15px 0 28px 200px;
+}
+
+.inputbox-title {
+  position: absolute;
+  top: 15px;
+  left: 0;
+  width: 200px;
+  height: 30px;
+  color: #666;
+  font-weight: bold;
+  line-height: 30px;
+}
+.inputbox-content {
+  position: relative;
+  width: 100%;
+  margin-left:0;
+}
+.inputbox-content input {
+  width: 100%;
+  height: 30px;
+  box-sizing: border-box;
+  line-height: 30px;
+  font-size: 14px;
+  border: 0;
+  background: none;
+  border-bottom: 1px solid #ccc;
+  outline: none;
+  border-radius: 0;
+  -webkit-appearance: none;
+}
+.inputbox-content input:focus ~label,.inputbox-content input:valid ~label{
+  color: #2962ff;
+  transform: translateY(-20px);
+  font-size: 0.825em;
+  cursor: default;
+}
+.inputbox-content input:focus ~.underline {
+  width: 100%;
+}
+
+.inputbox-content label{
+  position: absolute;
+  top:0;
+  left:0;
+  height: 30px;
+  line-height: 30px;
+  color:#ccc;
+  cursor:text;
+  transition: all 200ms ease-out;
+  z-index:10;
+}
+
+.inputbox-content .underline{
+content:'';
+display: block;
+position: absolute;
+bottom:-1px;
+left:0;
+width: 0;
+height: 2px;
+background: #2962ff;
+transition: all 200ms ease-out;
+}
+
+
+.input-content .btns {
+  padding: 30px 0 0 200px;
+}
+.btnn {
+  display: inline-block;
+  margin-right: 2px;
+  padding: 10px 25px;
+  background: none;
+  border: 1px solid #c0c0c0;
+  border-radius: 2px;
+  color: #666;
+  font-size: 1.125em;
+  outline: none;
+  transition: all 100ms ease-out;
+}
+.btns .btnn:hover,.btns .btnn:focus{
+  transform: translateY(-3px);
+}
+.btnn-confirm{
+    border:1px solid #2962ff;
+    background: #2962ff;
+    color: #fff;
+}
+
 
