--- a/the_project/templates/base.html
+++ b/the_project/templates/base.html
@@ -10,11 +10,13 @@
     <script src="/static/main.js"></script>
     {% block head %}{% endblock %}
 </head>
-<nav class="header">
-      <a href="/" class="logo">Дипломний проект</a>
-      <div class="header-right">
-          <a href="/admin">Адмін панель</a>
-      </div>
-</nav>
-{% block body %}{% endblock %}
+<body>
+    <nav class="header">
+        <a href="/" class="logo">Дипломний проект</a>
+        <div class="header-right">
+            <a href="/admin">Адмін панель</a>
+        </div>
+    </nav>
+    {% block body %}{% endblock %}
+</body>
 </html>
