--- a/the_project/templates/add_user_step_1.html
+++ b/the_project/templates/add_user_step_1.html
@@ -20,7 +20,7 @@
             <dl class="inputbox">
                 <dt class="inputbox-title">Input Address</dt>
                 <dd class="inputbox-content">
-                    <input id="input1" type="password" required/>
+                    <input id="input1" type="text" required/>
                     <label for="input1">Address</label>
                     <span class="underline"></span>
                 </dd>
