--- a/the_project/templates/add_user_step_1.html
+++ b/the_project/templates/add_user_step_1.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block head %}
-    <title>Add User</title>
+<title>Step 1</title>
 {% endblock %}
 
 {% block body %}
@@ -9,26 +9,28 @@
     <section class="input-content">
         <h2>Enter your Data</h2>
         <div class="input-content-wrap">
-            <dl class="inputbox">
-                <dt class="inputbox-title">Input Name</dt>
-                <dd class="inputbox-content">
-                    <input id="input0" type="text" required/>
-                    <label for="input0">Name & Surname</label>
-                    <span class="underline"></span>
-                </dd>
-            </dl>
-            <dl class="inputbox">
-                <dt class="inputbox-title">Input Address</dt>
-                <dd class="inputbox-content">
-                    <input id="input1" type="text" required/>
-                    <label for="input1">Address</label>
-                    <span class="underline"></span>
-                </dd>
-            </dl>
-            <div class="btns">
-                <button class="btnn btnn-confirm">Send</button>
-                <button class="btnn btnn-cancel">Reset</button>
-            </div>
+            <form action="/add_user_step_1" method="POST">
+                <dl class="inputbox">
+                    <dt class="inputbox-title">Input Name</dt>
+                    <dd class="inputbox-content">
+                        <input id="input0" name="name" type="text" required/>
+                        <label for="input0">Name & Surname</label>
+                        <span class="underline"></span>
+                    </dd>
+                </dl>
+                <dl class="inputbox">
+                    <dt class="inputbox-title">Input Address</dt>
+                    <dd class="inputbox-content">
+                        <input id="input1" name="address" type="text" required/>
+                        <label for="input1">Address</label>
+                        <span class="underline"></span>
+                    </dd>
+                </dl>
+                <div class="btns">
+                    <input type="submit" class="btnn btnn-confirm" value="Send"/>
+                    <button class="btnn btnn-cancel">Reset</button>
+                </div>
+            </form>
         </div>
     </section>
 </div>
