--- a/the_project/templates/add_user_step_2.html
+++ b/the_project/templates/add_user_step_2.html
@@ -1,18 +1,68 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title>Step 2</title>
+    <title>Step 2</title>
 {% endblock %}
 
 {% block body %}
-<div style="text-align: center" class="rectangle">
-    <img id="preview" src="../images/person.jpg"/>
-    <canvas id="video" width="720" height="540" style="display: none; margin-left: auto; margin-right: auto;"/>
-</div>
-<div>
-    <button id="start" class="btn" onclick="showHide('preview', 'video')">Start</button>
-</div>
-<div>
-    <button id="send" class="btn" onclick="parsePhoto()">Send 1/5</button>
-</div>
+    <div style="text-align: center" class="rectangle">
+        <img id="preview" src="../images/person.jpg"/>
+        <canvas id="video" width="960" height="540" style="display: none; margin-left: auto; margin-right: auto;"/>
+    </div>
+    <div>
+        <button id="start" class="btn" onclick="showHide('preview', 'video')">Start</button>
+    </div>
+    <div>
+        <button id="send" class="btn" onclick="parsePhoto()">Send 1/5</button>
+    </div>
+    <style>
+
+        div.gallery {
+            margin: 4px;
+            float: left;
+        }
+
+        div.gallery img {
+            width: 100%;
+            height: auto;
+        }
+
+        .gallery_photos {
+            position: relative;
+            width: 960px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+    </style>
+    </head>
+    <body>
+    <div class="gallery_photos">
+        <div class="gallery">
+            <img src="../images/photo.png" width="188" height="105.75">
+        </div>
+
+        <div class="gallery">
+            <a target="_blank">
+                <img src="../images/photo.png" width="188" height="105.75">
+            </a>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank">
+                <img src="../images/photo.png" width="188" height="105.75">
+            </a>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="img_mountains.jpg">
+                <img src="../images/photo.png" width="188" height="105.75">
+            </a>
+        </div>
+        <div class="gallery">
+            <a target="_blank" href="img_mountains.jpg">
+                <img src="../images/photo.png" width="188" height="105.75">
+            </a>
+        </div>
+    </div>
 {% endblock %}
