working on multi-form to add new users

--- a/the_project/templates/admin.html
+++ b/the_project/templates/admin.html
@@ -36,11 +36,12 @@
 
     <div class="form">
         <form action="/admin/submit_form/" method="POST">
-            <!--                           name args are needed for backend -->
+            <!--  'name' args are needed for backend -->
             <input type="text" name="name" id="name" placeholder="Name">
             <input type="text" name="address" id="address" placeholder="Address">
             <input type="submit" value="Add User">
         </form>
     </div>
+    <a href="/multi_form_test/" class="btn">Multi Form Test</a>
 </div>
 {% endblock %}
