--- a/the_project/templates/admin.html
+++ b/the_project/templates/admin.html
@@ -9,6 +9,8 @@
 <div class="content">
     <h1 style="text-align: center">Адмін панель</h1>
     <a href="/add_user_step_1" style="text-align: center" class="add_btn">Додати користувача</a>
+<!--    <a href="/multi_form_test/" class="btn">Multi Form Test</a>-->
+    <a href="/multi_form_test/" class="add_btn">Multi Form Test</a>
     {% if users|length < 1 %}
     <h4 style="text-align: center">There is no users yet.</h4>
     {% else %}
@@ -34,7 +36,7 @@
     </table>
     {% endif %}
 
-    <div class="form">
+    <div class="form-temp">
         <form action="/admin/submit_form/" method="POST">
             <!--  'name' args are needed for backend -->
             <input type="text" name="name" id="name" placeholder="Name">
@@ -42,6 +44,6 @@
             <input type="submit" value="Add User">
         </form>
     </div>
-    <a href="/multi_form_test/" class="btn">Multi Form Test</a>
+
 </div>
 {% endblock %}
