--- a/the_project/templates/multi_form_temp.html
+++ b/the_project/templates/multi_form_temp.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <!-- 'form' should have class 'form' later !!!!!!!!!!!!!!!!!!!!1 -->
-<form action="/admin/submit_form/" method="POST" class="">
+<form action="/admin/submit_form/" method="POST" class="form">
     <h1 class="text-center">Registration Form</h1>
     <!-- Progress bar -->
     <div class="progressbar">
@@ -19,11 +19,11 @@
     <!-- Steps -->
     <div class="form-step form-step-active">
         <div class="input-group">
-            <label for="username" style="color: white">Name</label>
+            <label for="username" >Name</label>
             <input type="text" name="name" id="username"/>
         </div>
         <div class="input-group">
-            <label for="position" style="color: white">Address</label>
+            <label for="position" >Address</label>
             <input type="text" name="address" id="position"/>
         </div>
         <div class="">
